---------------------
subunit release notes
---------------------

NEXT (In development)
---------------------

0.0.21
------

BUGFIXES
~~~~~~~~

* Brown bag bugfix - 0.0.20's setup.py referenced cvs not csv.
  (Robert Collins, #1361924)

0.0.20
------

BUGFIXES
~~~~~~~~

* subunit2csv is now installed when using pip.
  (Robert Collins, #1279669)

* testscenarios is now a test dependency, not an install dependency.
  (Arfrever Frehtes Taifersar Arahesis, #1292757)

* The python-subunit tarball can now have setup run from the current
  directory. (Robert Collins, #1361857)

0.0.19
------

IMPROVEMENTS
~~~~~~~~~~~~

* ``subunit.run`` in Python will now exit 0 as long as the test stream has
  been generated correctly - this has always been the intent but API friction
  with testtools had prevented it working.
  (Robert Collins)

0.0.18
------

IMPROVEMENTS
~~~~~~~~~~~~

* Fix compatibility with testtools 0.9.35 which dropped the 'all' compat
  symbol. This breaks support for Python versions lower than 2.6.
  (Robert Collins, #1274056)

0.0.17
------

IMPROVEMENTS
~~~~~~~~~~~~

* Add ``subunit-output`` tool that can generate a Subunit v2 bytestream from
  arguments passed on the command line. (Thomi Richards, #1252084)

0.0.16
------

BUG FIXES
~~~~~~~~~

* Perl files should now honour perl system config.
  (Benedikt Morbach, #1233198)

* Python 3.1 and 3.2 have an inconsistent memoryview implementation which
  required a workaround for NUL byte detection. (Robert Collins, #1216246)

* The test suite was failing 6 tests due to testtools changing it's output
  formatting of exceptions. (Robert Collins)

* V2 parser errors now set appropriate mime types for the encapsulated packet
  data and the error message. (Robert Collins)

* When tests fail to import ``python subunit.run -l ...`` will now write a 
  subunit file attachment listing the failed imports and exit 2, rather than
  listing the stub objects from the importer and exiting 0.
  (Robert Collins, #1245672)
